TestCases/Errors/range_value/observations/aut_10_obs.spm
 obs   16-5   0.000231113540227344 
 obs   16-6   0.000188615127581479 
 obs   17-6   0.000146428609743151 
 obs   16-7   0.00038692269208707 
 obs   17-7   0.000305162524024724 
 obs   6-15   0.00154385964912281 
 obs   6-16   0.000675675675675676 
 obs   7-16   0 
 obs   10-19   0.00936666666666667 
 obs   11-19   0.0157729603729604 
 obs   12-19   0.011 
 obs   10-20   0.0100652173913043 
 error_value   16-5   0 
 error_value   16-6   0 
 error_value   17-6   0 
 error_value   16-7   0 
 error_value   17-7   0 
 error_value   6-15   0 
 error_value   6-16   0 
 error_value   7-16   0 
 error_value   10-19   0 
 error_value   11-19   0 
 error_value   12-19   0 
 error_value   10-20   0 
